Sat Jul  5 08:48:05 2008  Tanaka Akira  <akr@fsij.org>

	* re.c (unescape_nonascii): add has_property argument not to
	  raise error by /\p{Hiragana}\u{3042}/ in EUC-JP script.
	  (rb_reg_preprocess): use has_property argument to make regexp
	  encoding fixed.

Sat Jul  5 08:29:47 2008  Tanaka Akira  <akr@fsij.org>

	* re.c (unescape_nonascii): make regexp fixed_encoding if \p is used.
	  fixed [ruby-core:17279].

Fri Jul  4 23:12:53 2008  Masaki Suketa  <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c (d2time): fix the bug of VT_DATE 
	  to String conversion when negative value.
	  
	* test/win32ole/test_win32ole_variant.rb: ditto.

Fri Jul  4 22:15:29 2008  Tanaka Akira  <akr@fsij.org>

	* lib/test/unit/testcase.rb: collect decendants of
	  Test::Unit::TestCase using inherited.

	* lib/test/unit/autorunner.rb: don't use ObjectSpace.each_object.

	* lib/test/unit/collector/dir.rb: ditto.

	* lib/test/unit/collector/objectspace.rb: ditto.

	[ruby-core:17126]

Fri Jul  4 20:43:53 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/oniguruma.h (OnigEncoding): removed auxiliary_data.

	* include/ruby/encoding.h (ENC_DUMMY_P): moved dummy encoding flag to
	  rb_encoding from Encoding instance.

	* encoding.c (rb_encoding_list): list of Encoding instances.

	* encoding.c (struct rb_encoding_entry): moved base encoding from
	  instance variable.

Fri Jul  4 17:51:07 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* numeric.c (check_uint, rb_num2uint, rb_fix2uint): proper check.

Fri Jul  4 14:17:22 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/net/ftp.rb (Net::FTP#sendport): use divmod.  [ruby-core:17557]

Fri Jul  4 11:08:37 2008  nari  <authorNari@gmail.com>

	* gc.c (garbage_collect_force): sweep is completely ended.

	* gc.c (os_obj_of): invoke garbage_collect_force() when freelist none.

Fri Jul  4 05:01:26 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* numeric.c (rb_num2uint, rb_fix2uint): typo.
